fin de l'exercice

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Gustoso</title>
 </head>
 <body>
-    <img id="bg_header" src="Ebene.png" width="100%" alt="">
+    <img id="bg_header" src="img/Ebene.png" width="100%" alt="">
     <header>
         <nav class="navbar">
             <div class="container">
@@ -42,13 +42,17 @@
             </div><!-- /.container-fluid -->
         </nav>
         <h1 class="text-center">Pastry with love</h1>
-        <div id="dashed_line"></div>
+        <div class="text-center">
+            <img id="dashed_line" src="img/dashed_line.png" alt="">
+        </div>
+
+
         <p id="We_re_bringing_you_fresh_ingredients_every_day" class="text-center">We're bringing you fresh ingredients every<br> day in ways you can't resist.</p>
         <button type="button" class="btn btn-header center-block" name="button">OUR MENU</button>
 
     </header>
     <section id="section1">
-        <img id="bordure" src="bordure.png" alt="">
+        <img id="bordure" src="img/bordure.png" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center">
@@ -60,35 +64,35 @@
                     <h4>Chef Cook</h4>
                     <p>
                         <span>Benito</span>
-                        <img id="avatar" src="img.png" alt="">
+                        <img id="avatar" src="img/img.png" alt="">
                         <span>Gaspare</span>
                     </p>
-                    <p class="blockquote text-left"><img id="blockquote1" src="blockquote.png" alt=""></p>
+                    <p class="blockquote text-left"><img id="blockquote1" src="img/blockquote.png" alt=""></p>
                     <p class="Scriptina">Unique creations for unique occasions</p>
-                    <p class="blockquote text-right"><img id="blockquote2" src="blockquote.png" alt=""></p>
+                    <p class="blockquote text-right"><img id="blockquote2" src="img/blockquote.png" alt=""></p>
 
 
                 </div>
                 <div id="s1ri" class="col-md-6">
-                    <img id="tache-blanche" src="tache_blanche.png" alt="">
+                    <img id="tache-blanche" src="img/tache_blanche.png" alt="">
                     <p id="text-tache-blanche" class="text-center">TASTES SO  GOOD!</p>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="Ebene 10.jpg" alt="">
+                            <img src="img/Ebene 10.jpg" alt="">
                             <div class="cadre-photo"></div>
                         </div>
                         <div class="col-md-6">
-                            <img src="img2.jpg" alt="">
+                            <img src="img/img2.jpg" alt="">
                             <div class="cadre-photo"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="img3.jpg" alt="">
+                            <img src="img/img3.jpg" alt="">
                             <div class="cadre-photo"></div>
                         </div>
                         <div class="col-md-6">
-                            <img src="img4.jpg" alt="">
+                            <img src="img/img4.jpg" alt="">
                             <div class="cadre-photo"></div>
                         </div>
                     </div>
@@ -98,12 +102,11 @@
 
     </section>
     <section id="section2">
-        <!-- <img src="section2.jpg" alt=""> -->
         <div class="container">
             <div class="row">
                 <div id="s2c" class="col-md-9 col-md-offset-1">
                     <div class="col-md-5">
-                        <img id="s2i1" class="pull-right" src="s2i1.jpg" alt="">
+                        <img id="s2i1" class="pull-right" src="img/s2i1.jpg" alt="">
                     </div>
                     <div id="ready">
                         <p>ready in</p>
@@ -119,9 +122,9 @@
                         </p>
                         <div class="slides">
                             <div><i class="fas fa-angle-left"></i></div>
-                            <img src="slide1.png" alt="">
-                            <img src="slide2.png" alt="">
-                            <img src="slide3.png" alt="">
+                            <img src="img/slide1.png" alt="">
+                            <img src="img/slide2.png" alt="">
+                            <img src="img/slide3.png" alt="">
                             <div><i class="fas fa-angle-right"></i></div>
                         </div>
                     </div>
@@ -222,31 +225,31 @@
         </div>
     </section>
     <section id="section4">
-        <img id="moulin" src="moulin.png" alt="">
+        <img id="moulin" src="img/moulin.png" alt="">
         <h2 class="text-center">The Jibarito sandwich</h2>
         <p class="text-center"> the best sandwich you’ve ever tasted!</p>
         <div class="container">
             <div class="row">
                 <div id="s4left" class="col-md-3 text-center">
                     <div class="">
-                        <img src="img1s4.jpg" alt="">
+                        <img src="img/img1s4.jpg" alt="">
                         <h3>Class aptent</h3>
                         <p>Quot alienum persecuti ut eam, nam ad  atqui primis nusquam.</p>
                     </div>
                     <div class="">
-                        <img src="img2s4.jpg" alt="">
+                        <img src="img/img2s4.jpg" alt="">
                         <h3>Nulla eget</h3>
                         <p>Nullam dictum felis eu pede mollis  pretium Integer tincidunt.</p>
                     </div>
                     <div class="">
-                        <img src="img3s4.jpg" alt="">
+                        <img src="img/img3s4.jpg" alt="">
                         <h3>Sed nibh purus</h3>
                         <p>Aenean eleifend tellus leo ligula,  porttitor eu, consequat vi</p>
                     </div>
                 </div>
                 <div class="col-md-8 col-md-offset-1">
                     <div id="s4right">
-                        <img id="s4i1" src="ebene 8.jpg" width="100%" alt="">
+                        <img id="s4i1" src="img/ebene 8.jpg" width="100%" alt="">
                         <div id="s4right1" class="text-center">
                             <h4>PREP</h4>
                             <h6>15</h6>
